# program-partitioning-for-security-enclaves

./: .gitignore  CMakeLists.txt  README.md  protect.sh
docker_setup/: Dockerfile  installer.properties  setup_docker.sh
eval/: context_switch_eval.json  copy_shadow_callstacks.sh  ctx_switches_eval.sh  dump_dataset_info.sh  dump_eval_tables.py  process_ctx_switches_eval_data.py  process_security_data.py  process_tcb_eval_data.py  secure_tcb_eval.json  shadow_call_stack.json  static_context_switches_eval.sh  tcb_eval.sh
eval/annotations/: memcached_annotations.json
eval/bitcodes/: mcu.bc
eval/eval_library/: Makefile  ShadowStackBuilder.bc  ShadowStackBuilder.cpp
eval/hook/: libminm.c
eval/link_libraries/: mcu  memcached
eval/partition-out/2048_game/: 2048_game  2048_game_instrumented.bc
eval/partition-out/mcu/: mcu  mcu_instrumented.bc
eval/partition-out/memcached/: memcached  memcached_instrumented.bc
eval/partition-out/snake/: snake  snake_instrumented.bc
eval/partition-out/tetris/: tetris  tetris_instrumented.bc
eval/tables/: context_switches_eval_tables.tex  partitions.tex  security_eval_tables.tex  tcb_eval_tables.tex
images/: Program Partitioning - Analysis.xml
include/: Annotation.h  AnnotationParser.h  JsonAnnotationParser.h  ModuleAnnotationParser.h  Statistics.h
include/Analysis/: .CallGraph.h.swo  BasicBlockLivenessInfo.h  BlockPartition.h  BlockPartitioner.h  CallGraph.h  GlobalsUsageInFunctions.h  LivenessAnalysis.h  Numbers.h  Partition.h  PartitionForAnnotation.h  PartitionStatistics.h  Partitioner.h  ProgramPartitionAnalysis.h  ProgramPartitionStatistics.h
include/ClangTools/: ClangToolUtils.h  ProtoFileGenerator.h
include/CodeGen/: AsyloCodeGenerator.h  Class.h  CodeGenUtils.h  FileWriter.h  Function.h  OpenEnclaveCodeGenerator.h  OpenEnclaveSupportedLibFunctions.h  ProtoFile.h  ProtoFileGenerator.h  ProtoFileWriter.h  ProtoMessage.h  ProtoService.h  SGXCodeGenerator.h  SGXSupportedLibFunctions.h  ServiceImplGenerator.h  ServiceInterfaceWrapperGenerator.h  SourceFile.h  SourceFileWriter.h  UtilsGenerator.h
include/Debug/: AnnotationsTest.h  ILPBlockOptimizationData.h  ILPOptimizationData.h
include/Optimization/: CallbacksOptimization.h  DuplicateFunctionsOptimization.h  FunctionsMoveOutPartitionOptimization.h  FunctionsMoveToPartitionOptimization.h  GlobalsMoveOutPartitionOptimization.h  GlobalsMoveToPartitionOptimization.h  ILPOptimization.h  KLOptimizationPass.h  KLOptimizer.h  PartitionOptimization.h  PartitionOptimizer.h  StaticAnalysisOptimization.h
include/Transforms/: CallbacksHelper.h  CallbacksHelper_old.h  PartitionExtractor.h  ProgramSlicer.h  ProtoGeneratorPass.h
include/Utils/: Annotation.h  AnnotationParser.h  Logger.h  PartitionUtils.h  Statistics.h  Utils.h
lib/: Logger.cpp  ModuleAnnotationParser.cpp  Statistics.cpp
lib/Analysis/: BasicBlockLivenessInfo.cpp  BlockPartitioner.cpp  CallGraph.cpp  GlobalsUsageInFunctions.cpp  LivenessAnalysis.cpp  Partition.cpp  PartitionForAnnotation.cpp  PartitionStatistics.cpp  Partitioner.cpp  ProgramPartitionAnalysis.cpp  ProgramPartitionStatistics.cpp
lib/ClangTools/: ClangToolUtils.cpp  ProtoFileGenerator.cpp  ProtoFileGeneratorTool.cpp  SGXCodeGenerationTool.cpp
lib/CodeGen/: AsyloCodeGenerator.cpp  Class.cpp  CodeGenUtils.cpp  FileWriter.cpp  Function.cpp  OpenEnclaveCodeGenerator.cpp  OpenEnclaveSupportedLibFunctions.cpp  ProtoFileGenerator.cpp  ProtoFileWriter.cpp  SGXCodeGenerator.cpp  ServiceImplGenerator.cpp  ServiceInterfaceWrapperGenerator.cpp  SourceFileWriter.cpp  UtilsGenerator.cpp
lib/Debug/: AnnotationsTest.cpp  BlockOptimizationFactorsTable.cpp  DgPDGCompare.cpp  FunctionCloneIntoTest.cpp  FunctionExtractor.cpp  ILPBlockOptimizationData.cpp  ILPOptimizationData.cpp  JsonAnnotationsTest.cpp  ModuleAnnotationsTest.cpp  OptimizationFactorsTable.cpp  PDGPass.cpp  SVFGTraversal.cpp
lib/Eval/: AnnotationCreatorPass.cpp  ModuleInformation.cpp  ShadowCallStackGeneratorPass.cpp  StaticNumberOfContextSwitches.cpp
lib/Optimization/: .CallbacksOptimization.cpp.swo  CallbacksOptimization.cpp  DuplicateFunctionsOptimization.cpp  FunctionsMoveOutPartitionOptimization.cpp  FunctionsMoveToPartitionOptimization.cpp  GlobalsMoveOutPartitionOptimization.cpp  GlobalsMoveToPartitionOptimization.cpp  ILPOptimization.cpp  KLOptimizationPass.cpp  KLOptimizer.cpp  PartitionOptimization.cpp  PartitionOptimizer.cpp
lib/Transforms/: .PartitionExtractor.cpp.swo  CallbacksHelper.cpp  PartitionExtractor.cpp  ProgramSlicer.cpp  ProtoGeneratorPass.cpp
lib/Utils/: Annotation.cpp  JsonAnnotationParser.cpp  Logger.cpp  ModuleAnnotationParser.cpp  PartitionUtils.cpp  Statistics.cpp  Utils.cpp
open_enclave_utils/: app_utils.h
scripts/: generateBazelBuildFile.py  generateOpenEnclaveMakefiles.py
templates/: BUILD_template  Makefile  enclave_Makefile  host_Makefile
test/annotations/: function_annotations.bc  function_annotations.c  function_annotations.txt
test/code-gen/snake/: aa  interface_selectors.h  partition_stats.json  snake.c  snake_driver.cc  snake_enclave.cc  snake_partition.txt
test/eval/: dump-partitions-tables.py  partition.sh
test/eval/annotations/: memcached_annotations.json
test/eval/bitcodes/: 2048_game.bc  tetris.bc
test/eval/dataset/: memcached.bc
test/eval/tables/: partitions.tex
test/extraction/: partition_extraction.sh
test/logger/: logger  logger_test.c
test/partitioner/: partition.sh
test/partitioner/2048_game/: 2048_game_annotations.json  expected_partition.txt
test/partitioner/snake/: expected_partition.txt  snake.bc
test/partitioner/tetris/: expected_partition.txt
test/proto-generator/2048_game/: 2048_game_partition.txt  secure_service.proto
test/proto-generator/memcached/: memcached_partition.txt  secure_service.proto
test/proto-generator/snake/: Makefile  secure_service.proto
test/proto-generator/tetris/: secure_service.proto  tetris_partition.txt
test/snake/: BUILD  Makefile  app_lib.bc  app_lib.s  enclave_lib.bc  enclave_lib.s  partition-stats.json  partition_model.lp  sgx.edl  snake.bc
(+1248 files in other folders)
